--- a/starter_code/style.css
+++ b/starter_code/style.css
@@ -1,6 +1,9 @@
 body {
   padding: 0;
   text-align: center;
+  display:flex ;
+  justify-content: right;
+  
 }
 
 .game-intro {
@@ -36,3 +39,15 @@ body button {
     float: left;
     padding: 20px 0px;
 }
+#example{
+
+    border: 1px solid black;
+    border-radius: 3px;
+    width: 400px;
+    height: 600px;
+    /* //background-color: #ddd; */
+    background-image: url(./images/road.jpg);
+    background-size: contain;
+
+}
+
